--- a/angular.json
+++ b/angular.json
@@ -32,12 +32,10 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
-
             ],
             "scripts": [
               "./node_modules/Jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-             
             ]
           },
           "configurations": {
@@ -45,13 +43,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 }
               ],
               "fileReplacements": [
@@ -107,9 +105,7 @@
               "src/styles.css",
               "../node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [
-
-            ]
+            "scripts": []
           }
         }
       }
