angular.json file

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             ],
             "scripts": [
               "./node_modules/Jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
